kubernetes/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: shop-cart
  name: shop-cart
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-cart
  template:
    metadata:
      labels:
        io.kompose.service: shop-cart
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - envFrom:
            - secretRef:
                name: shop-cart-env
          image: ghcr.io/andyrhman/drfshop_cart:0.0.1
          name: shop-cart
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/carts/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/carts/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
---
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: shop-cart-service
  name: shop-cart-service
spec:
  ports:
    - name: "8005"
      port: 8005
      targetPort: 8000
  selector:
    io.kompose.service: shop-cart
