kubernetes/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: shop-product
  name: shop-product
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-product
  template:
    metadata:
      labels:
        io.kompose.service: shop-product
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - envFrom:
            - secretRef:
                name: shop-product-env
          image: ghcr.io/andyrhman/drfshop_product:0.0.2
          name: shop-product
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/products/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/products/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: shop-product-service
  name: shop-product-service
spec:
  ports:
    - name: "8004"
      port: 8004
      targetPort: 8000
  selector:
    io.kompose.service: shop-product
