kubernetes/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: shop-users
  name: shop-users
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-users
  template:
    metadata:
      labels:
        io.kompose.service: shop-users
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - envFrom:
            - secretRef:
                name: shop-users-env
          image: ghcr.io/andyrhman/drfshop_users:0.0.2
          name: shop-users
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: shop-users-service
  name: shop-users-service
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8000
  selector:
    io.kompose.service: shop-users # use the deployment label
